--- a/app/views/admin/sub_courses/_sub_course.html.erb
+++ b/app/views/admin/sub_courses/_sub_course.html.erb
@@ -3,6 +3,9 @@
   <td><%= sub_course.name %></td>
   <td><%= sub_course.attachment.content if sub_course.attachment%></td>
   <td>
+    <%= link_to "测试题目", admin_course_sub_course_questions_path(@course.id, sub_course)%>
+  </td>
+  <td>
     <%= link_to [:admin, @course, sub_course], class: 'btn btn-xs btn-info', title: '查看' do %>
       <span class="glyphicon glyphicon-eye-open"></span>
     <%end%>
