--- a/app/views/admin/sub_courses/index.html.erb
+++ b/app/views/admin/sub_courses/index.html.erb
@@ -28,10 +28,11 @@
 <table class="table table-hover table-bordered text-center">
 	<thead>
 		<tr>
-			<th class="text-center">编号</th>
-			<th class="text-center">名称</th>
-      <th class="text-center">附件</th>
-			<th class="text-center" colspan="3">操作</th>
+			<th class="col-sm-2 text-center">编号</th>
+			<th class="col-sm-2 text-center">名称</th>
+      <th class="col-sm-6 text-center">附件</th>
+      <th>测试题目</th>
+			<th class="col-sm-2 text-center" colspan="3">操作</th>
 		</tr>
 	</thead>
 	<tbody>
