--- a/app/assets/stylesheets/application/custom.scss
+++ b/app/assets/stylesheets/application/custom.scss
@@ -814,7 +814,8 @@ body.exams__new, body.exams__show {
 body.teachers__my_courses, body.teachers__my_grades, body.teachers__my_info,
 body.teachers__my_account, body.teachers__upload_course_ware,
 body.teachers__my_questions, body.teachers__my_answers, body.teachers__discuss_center,
-body.teachers__my_score {
+body.teachers__my_score, body.teachers__select_grade, body.teachers__select_course,
+body.teachers__show_score {
 	.main-content {
 		.teacher-content {
 			margin-top: 20px;
@@ -953,7 +954,75 @@ body.teachers__my_score {
 			}
 		}
 
+     //成绩查询
+    div.search-step {
+      padding: 20px;
+      
+      a:hover {
+        background-color: #fff;
+        cursor: default;
+        border-color: #ccc;
+        color: #337ab7;
+      }
+
+      .active a:hover {
+        background-color: #337ab7;
+        cursor: default;
+        border-color: #ccc;
+        color: #fff;
+      }
+    }
+    .condition-row {
+      padding: 20px;
+    }
+
+    .search-score-btn{
+      padding: 20px;
+      text-align: center;
+      .btn-lg {
+        padding-right:20px;
+      }
+    }
+
+    //教师查阅统计图
+    .show-score {
+      .show-score-title {
+        padding: 20px;
+        .main-title {
+          width: 762px;
+          height: 88px;
+          line-height: 70px;
+          font-size: 24px;
+          color: #fff;
+          text-align: center;
+          margin: 0 auto;
+          background: image-url("new-exam-bg") no-repeat 0 0;
+        }
+      }
+
+      .average-score {
+        #averageScore {
+          height: 380px;
+        }
+
+        .col-sm-4 {
+          padding-top: 200px;
+        }
+      }
+
+      .sub-title {
+        padding-top: 20px;
+        padding-left: 70px;
+        font-size: 18px;
+        color: #337ab7;
+        .badge {
+          font-size: 18px;
+          background-color: #337ab7;
+        }
+      }
+    }
 	}
+
 }
 /*教师风采*/
 body.teachers__index {
