--- a/app/views/admin/courses/_form.html.erb
+++ b/app/views/admin/courses/_form.html.erb
@@ -1,4 +1,19 @@
-<%= form_for([:admin, @course], html: {class: "form-horizontal"}) do |f| %>
+<%= simple_form_for([:admin, @course], html: {class: "form-horizontal"}) do |f| %>
+  <div class="form-group">
+    <%= f.label :academy_id, '所属学院', class: 'col-sm-2 control-label' %>
+    <div class="col-sm-4">
+      <%= f.select(:academy_id, Academy.all.collect{ |p| [p.name, p.id]}, {prompt: '请选择学院'}, {class: 'form-control'}) %>
+    </div>
+  </div>
+  <div class="form-group">
+    <%= label_tag :teachers, '教师团队', class: 'col-sm-2 control-label' %>
+    <div class="col-sm-4">
+      <% Teacher.all.each do |teacher| %>
+        <%= check_box_tag("course[teacher_course_ids][]", teacher.id)%>
+        <%= teacher.name%>
+      <%end%>
+    </div>
+  </div>
   <div class="form-group">
     <%= f.label :image, '课程展示图', class: 'col-sm-2 control-label' %>
     <div class="col-sm-4">
